--- a/css/style.css
+++ b/css/style.css
@@ -3,7 +3,7 @@ body {
     background-color: rgb(19, 4, 2);
     color: rgb(24, 3, 3);
     margin: 0;
-    padding: 5px;
+    padding: 40px;
 }
 a {
     color:#cfddd3
@@ -37,9 +37,9 @@ a:visited {
 }
 
 .post {
+    text-align: left;
     margin: 10px;
-    padding: 8px;
-    border: 5px solid #d2e014;
+    padding: 10px;
     background-color: #c9c022;
     background-color: #2e22cf;
 }
@@ -48,7 +48,7 @@ a:visited {
     float: right;
     margin-right: 10px;
     display: block;
-    width: 140px;
+    width: 160px;
     margin: auto;
     display: flex;
     flex-wrap: wrap;
