--- a/css/style.css
+++ b/css/style.css
@@ -1,10 +1,12 @@
 body {
     font-family: Arial, sans-serif;
+    margin: 0;
     background-color: rgb(19, 4, 2);
     color: rgb(24, 3, 3);
-    margin: 0;
-    padding: 40px;
-}
+    padding: 20px;
+    margin-left: 40px;
+    }
+
 a {
     color:#cfddd3
 }
@@ -18,30 +20,38 @@ a:visited {
 }
 #content{
     background-color: #c9c022;
-    width: 50%;
+    width: 60%;
     margin: auto;
-    border: 1px solid #aeaeae
+    border: 1px solid #aeaeae;
+    border-radius: 25px;
+
 }
 
 #banner {
     background-color: #2e22cf;
     text-align: center;
     margin: 8px;
+    border-radius: 25px;
 }
 
-#blogpost {
-    margin: 10px;
+#displayflex {
+    display: flex;
+    flex-direction: right;
+    margin: auto;
     border: 1px solid #9a8b8b;
-    background-color:rgb(116, 23, 202);
-
+    background-color:#c9c022;
+    width: 100%;
+    border-radius: 25px;
 }
 
 .post {
-    text-align: left;
+    text-align: center;
     margin: 10px;
-    padding: 10px;
+    padding: 25px;
     background-color: #c9c022;
     background-color: #2e22cf;
+    border-radius: 25px;
+    margin-left: 20px;
 }
 
 .post .left {
@@ -64,3 +74,4 @@ a:visited {
     flex-wrap: wrap;
     justify-content: space-around;
 }
+
