--- a/css/dark.css
+++ b/css/dark.css
@@ -1,14 +1,14 @@
 body {
     font-family: Arial, sans-serif;
     margin: 0;
-    background-color: rgb(255, 255, 255);
-    color: rgb(253, 252, 252);
+    background-color: rgb(19, 4, 2);
+    color: rgb(24, 3, 3);
     padding: 20px;
     margin-left: 40px;
     }
 
 a {
-    color:#000000
+    color:#cfddd3
 }
 
 a:hover {
@@ -36,13 +36,12 @@ a:visited {
 
 #displayflex {
     display: flex;
-    flex-direction: left;
+    flex-direction: right;
     margin: auto;
     border: 1px solid #9a8b8b;
-    background-color:#c9c022;
+    background-color: maroon;
     width: 100%;
     border-radius: 25px;
-
 }
 
 .post {
@@ -52,6 +51,7 @@ a:visited {
     background-color: #c9c022;
     background-color: #2e22cf;
     border-radius: 25px;
+    margin-left: 20px;
 }
 
 .post .left {
@@ -74,4 +74,3 @@ a:visited {
     flex-wrap: wrap;
     justify-content: space-around;
 }
-
