--- a/css/style.css
+++ b/css/style.css
@@ -2,8 +2,8 @@
 body {
     font-family: Arial, sans-serif;
     margin: 0;
-    background-color: rgb(255, 255, 255);
-    color: rgb(253, 252, 252);
+    background-color: rgb(0, 0, 0);
+    color: rgb(0, 0, 0);
     padding: 20px;
     margin-left: 40px;
     }
@@ -17,10 +17,10 @@ a:hover {
 }
 
 a:visited {
-    color: rgb(178, 179, 179);
+    color: rgb(10, 12, 12);
 }
 #content{
-    background-color: #c9c022;
+    background-color: #c37017;
     width: 60%;
     margin: auto;
     border: 1px solid #aeaeae;
@@ -37,10 +37,9 @@ a:visited {
 
 #displayflex {
     display: flex;
-    flex-direction: right;
+    flex-direction: left;
     margin: auto;
-    border: 1px solid #9a8b8b;
-    background-color: red;
+    background-color:#c37017;
     width: 100%;
     border-radius: 25px;
 
@@ -50,9 +49,10 @@ a:visited {
     text-align: center;
     margin: 10px;
     padding: 25px;
-    background-color: #c9c022;
+    background-color: #087b21;
     background-color: #2e22cf;
     border-radius: 25px;
+    margin-left: 20px;
 }
 
 .post .left {
