--- a/css/dark.css
+++ b/css/dark.css
@@ -1,14 +1,15 @@
+
 body {
     font-family: Arial, sans-serif;
     margin: 0;
-    background-color: rgb(247, 247, 247);
-    color: rgb(253, 253, 253);
+    background-color: rgb(0, 0, 0);
+    color: rgb(183, 183, 183);
     padding: 20px;
     margin-left: 40px;
     }
 
 a {
-    color: #2215ce;
+    color:#000000
 }
 
 a:hover {
@@ -16,19 +17,19 @@ a:hover {
 }
 
 a:visited {
-    color:#ffffff;
+    color: rgb(10, 12, 12);
 }
 #content{
-    background-color: rgb(19, 12, 12);
+    background-color: #c37017;
     width: 60%;
     margin: auto;
-    border: 1px solid #0e0909;
+    border: 1px solid #aeaeae;
     border-radius: 25px;
 
 }
 
 #banner {
-    background-color:#2215ce;
+    background-color: #2e22cf;
     text-align: center;
     margin: 8px;
     border-radius: 25px;
@@ -38,16 +39,17 @@ a:visited {
     display: flex;
     flex-direction: left;
     margin: auto;
-    background-color: rgb(14, 10, 10);
+    background-color:#c37017;
     width: 100%;
     border-radius: 25px;
+
 }
 
 .post {
     text-align: center;
     margin: 10px;
     padding: 25px;
-    background-color: #b3b3b2;
+    background-color: #087b21;
     background-color: #2e22cf;
     border-radius: 25px;
     margin-left: 20px;
