--- a/css/style.css
+++ b/css/style.css
@@ -2,14 +2,14 @@
 body {
     font-family: Arial, sans-serif;
     margin: 0;
-    background-color: rgb(0, 0, 0);
-    color: rgb(0, 0, 0);
+    background-color: rgb(247, 247, 247);
+    color: rgb(253, 253, 253);
     padding: 20px;
     margin-left: 40px;
     }
 
 a {
-    color:#000000
+    color: #2215ce;
 }
 
 a:hover {
@@ -17,19 +17,19 @@ a:hover {
 }
 
 a:visited {
-    color: rgb(10, 12, 12);
+    color:#ffffff;
 }
 #content{
-    background-color: #c37017;
+    background-color: rgb(19, 12, 12);
     width: 60%;
     margin: auto;
-    border: 1px solid #aeaeae;
+    border: 1px solid #0e0909;
     border-radius: 25px;
 
 }
 
 #banner {
-    background-color: #2e22cf;
+    background-color:#2215ce;
     text-align: center;
     margin: 8px;
     border-radius: 25px;
@@ -39,17 +39,16 @@ a:visited {
     display: flex;
     flex-direction: left;
     margin: auto;
-    background-color:#c37017;
+    background-color: rgb(14, 10, 10);
     width: 100%;
     border-radius: 25px;
-
 }
 
 .post {
     text-align: center;
     margin: 10px;
     padding: 25px;
-    background-color: #087b21;
+    background-color: #b3b3b2;
     background-color: #2e22cf;
     border-radius: 25px;
     margin-left: 20px;
